# sohook

./: .gitignore  CMakeLists.txt  README.md  loader.cpp
include/: address_utils.h  file_utils.h  logger.h  protocol_utils.h  vtable_helper.h  wework_conversation.h  wework_conversation_service.h  wework_hook.h  wework_logic_center.h  wework_message_factory.h
scripts/: push_so.sh
src/: address_utils.cpp  file_utils.cpp  main.cpp  protocol_utils.cpp  wework_conversation.cpp  wework_conversation_service.cpp  wework_hook.cpp  wework_logic_center.cpp  wework_message_factory.cpp
